Increase feed spacing and fix ad css

--- a/app/assets/stylesheets/modules/status-panel.css.scss
+++ b/app/assets/stylesheets/modules/status-panel.css.scss
@@ -26,7 +26,7 @@
 .story {
   @extend .panel;
   @extend .panel-default;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
 }
 
 .update-panel {
